work on homepage

--- a/home.html
+++ b/home.html
@@ -91,6 +91,13 @@
         margin: auto;
       }
 
+      .illustImage {
+        width: min(90%, 400px);
+        display: inline-block;
+        transform: translateX(80%);
+        align: right;
+      }
+
     </style>
 </head>
 <body>
@@ -104,22 +111,31 @@
     </header>
     <section class="maincontent">
       <section class="textColumn-cont">
-        <h1 class="massivetitle">Welcome to Students Travel Green!</h1>
-        <iframe style="height:400px; width:600px; margin: 20px 0;" src="https://www.youtube.com/embed/jMxoGqsmk5Y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <h1 class="massivetitle">Welcome to Climate Contract!</h1>
 
         <div class="textColumn">
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut at varius mauris. Nullam blandit rutrum sem, quis gravida enim ultrices non. Mauris bibendum nunc sit amet blandit ultrices. Integer vel metus vulputate, iaculis risus sed, feugiat neque. Cras dapibus auctor venenatis. Sed vulputate pulvinar nisl, sollicitudin aliquet arcu mattis eu. Nam fringilla eleifend dui, a efficitur tellus dignissim porttitor. Nullam nec neque non nulla consectetur malesuada. Integer varius et erat at molestie. Mauris placerat sem sed sem fermentum tincidunt.</p>
-            <p>
 
-            In sapien mi, maximus sit amet lectus nec, consequat faucibus turpis. Praesent ac vehicula magna. Sed faucibus ipsum in consequat varius. Integer purus felis, rutrum at sapien sit amet, fringilla venenatis sapien. Praesent a ante euismod, sollicitudin nibh nec, varius nisi. Vestibulum venenatis maximus enim, sit amet feugiat lacus congue a. Morbi et sapien nisi. Suspendisse posuere mi in ex egestas blandit. Nunc iaculis tortor a massa vulputate, et tempus est varius.</p><p>
+          <h2>Was ist die Idee von Climate Contract? </h2>
+          <p>Das Ziel von Climate Contract ist es, Generationen zu verkn&uuml;pfen, um gemeinsam einen Beitrag zum Klimaschutz zu leisten. Nachhaltige Produkte und Dienstleistungen sind in vielen Bereichen leider immer noch um einiges teurer als herk&ouml;mmliche Optionen. Diesen Preisunterschied bekommen junge Menschen und Student*innen am meisten zu sp&uuml;ren, da die finanziellen Mittel f&uuml;r klimafreundliche Alternativen oftmals nicht zur Verf&uuml;gung stehen. So stehen junge Menschen immer wieder vor der Entscheidung zwischen &laquo;erschwinglich&raquo; oder &laquo;nachhaltig&raquo; und dies sollte nicht der Fall sein. <br>
+          Wir m&ouml;chten dies mit dem Climate Contract &auml;ndern. <br>
+          Mit dem Climate Contract k&ouml;nnen &auml;ltere Generationen, junge Menschen und Student*innen bei klimabewussten Entscheidungen und K&auml;ufen finanziell unterst&uuml;tzen. Dadurch wird es jungen Menschen erm&ouml;glicht, eine nachhaltigere und umweltbewusstere Lebensweise zu f&uuml;hren und dadurch einen Beitrag zum Klimaschutz zu leisten. Gleichzeitig bietet Climate Contract eine M&ouml;glichkeit f&uuml;r Sponsoren, &ouml;kologische Investitionen zu f&ouml;rdern und sich so f&uuml;r den Klimaschutz einzusetzen. </p>
+          <img class="illustImage" src="/content/visuals/worldshake.jpeg" alt="world handshake" />
+           <h2>Wie funktioniert ein Climate Contract? </h2>
+          <p>Climate Contract ist ein Vertrag, der zwischen einer jungen Person bis zum Alter von 25 Jahren und einem Sponsor verabschiedet werden kann. Dabei verpflichtet sich der Sponsor, die zus&auml;tzlichen Kosten, welche beim Kauf von nachhaltigen Produkten und Dienstleistungen anfallen, zu &uuml;bernehmen. Im Gegenzug verspricht die/der Gesponserte, umweltbewusste Entscheidungen zu treffen, zum Beispiel mit dem Zug, anstatt dem Flugzeug zu reisen. Verschiedene Vertr&auml;ge k&ouml;nnen f&uuml;r unterschiedliche Bereiche vereinbart werden, wie zum Beispiel f&uuml;r Reisen oder den Kauf von Kleidung. </p>
+           <h2> Wer kann Sponsor sein? </h2>
+          <p>Jeder kann ein Sponsor sein! <br>
+          Eltern, Grosseltern, Gotti/ G&ouml;tti oder andere Bekannte, jede*r die/der bereit ist eine junge Person bei klimabewussten Entscheidungen finanziell zu unterst&uuml;tzen.<br>
+          Findest du die Idee von Climate Contract grossartig? <br>
+          Schlage doch deiner Tochter/ deinem Neffen vor, gemeinsam ein Climate Contract zu unterzeichnen &#61514; [smiley] </p>
+           <h2>Bist du eine junge Person unter 25 Jahren? </h2>
+          Dann bist du hier genau richtig! <br>
+          Ziel von einem Climate Contract ist es, junge Menschen wie dich, bei klimabewussten Entscheidungen finanziell zu unterst&uuml;tzen. <br>
+          Planst du eine Zugreise oder kannst du dir Kleidung von nachhaltigen Labels einfach nicht leisten? <br>
+          Frage ein*e Bekannte*r von dir an, zum Beispiel deine Eltern, und schlage vor, dass ihr gemeinsam ein Climate Contract unterzeichnet, um einen Beitrag zum Klimaschutz zu leisten. </p>
+           <h2> Wie lange ist der Vertrag g&uuml;ltig? </h2>
+          Der Standart-Vertrag, welcher du hier downloaden kannst, ist bis zum 25. Lebensjahr des Gesponserten g&uuml;ltig. Aber nat&uuml;rlich k&ouml;nnen die Konditionen auch individuell angepasst werden.
+        </p>
 
-            Donec viverra quis nisl in placerat. Maecenas non leo leo. Vestibulum ornare elit vitae vulputate fringilla. Pellentesque auctor interdum cursus. Quisque faucibus velit id suscipit ultricies. Vivamus eu nisi eu diam dapibus mattis vitae et lectus. Donec non bibendum eros. Proin at suscipit sapien. Nulla facilisi. Nunc malesuada quam eu odio malesuada, quis pharetra arcu luctus.</p><p>
-
-            Mauris diam magna, condimentum sit amet diam at, interdum iaculis elit. Mauris vel luctus ipsum, sit amet elementum purus. Morbi nec velit est. Integer eu mollis sapien. Donec consequat, elit nec placerat ultricies, mi augue egestas metus, eget efficitur nulla velit et dui. Sed justo risus, pretium ac justo non, semper sodales metus. Quisque sed faucibus felis, a euismod ante.</p><p>
-
-            Etiam vitae vehicula elit. Curabitur aliquet malesuada purus eget tincidunt. Donec ultrices faucibus mauris, at feugiat massa consequat at. Integer varius aliquet ante. Donec id maximus velit. Suspendisse potenti. Praesent dictum tempus fringilla. Vestibulum dapibus ultricies mauris, nec elementum ante porttitor sit amet. Praesent mauris mauris, faucibus sit amet rutrum eget, viverra a odio.
-          </p>
         </div>
       </section>
     </section>
