--- a/home.html
+++ b/home.html
@@ -14,6 +14,8 @@
         --bg-hover: #e3efde;
         --main: #000000;
         --text: var(--main);
+        --contentcolumn-width: min(100%, 900px);
+
       }
       body {
         background-color: var(--bg);
@@ -45,9 +47,13 @@
         position: sticky; top: 0;
         width: 100%;
         background-color: var(--bg);
-
         display: flex;
         justify-content: flex-end;
+      }
+      .inheader {
+        width: var(--contentcolumn-width);
+
+        height: 100%;
       }
       /*.header-img-cont {
         width: 20%; height: 100%;
@@ -87,27 +93,41 @@
         margin: 60px 0 60px;
       }
       .textColumn {
-        width: min(100%, 700px);
+        width: var(--contentcolumn-width);
         margin: auto;
+      }
+      .textColumn p, .textColumn h2 {
+        margin-left: auto;margin-right: auto;
+        width: 80%;
       }
 
       .illustImage {
-        width: min(90%, 400px);
+        width: min(50%, 600px);
         display: inline-block;
-        transform: translateX(80%);
-        align: right;
+        float: right;
       }
 
+      .logo-cont  {
+        height: 90%;
+        position: absolute;
+        top: 5%; left: 5%;
+      }
+      .logo-cont img {
+        height: 100%;
+      }
     </style>
 </head>
 <body>
   <section class="allcontent">
     <header class="header">
+        <div class="logo-cont">
+          <img src="/content/visuals/logo.png" alt="Climate Contract logo"/>
+        </div>
       <div class="nav-cont">
         <div class="nav-tab">Home</div>
         <div class="nav-tab">Download Contract</div>
         <div class="nav-tab">Your Experience</div>
-      </div>
+    </div>
     </header>
     <section class="maincontent">
       <section class="textColumn-cont">
@@ -116,10 +136,11 @@
         <div class="textColumn">
 
           <h2>Was ist die Idee von Climate Contract? </h2>
+          <img class="illustImage" src="/content/visuals/worldshake.jpeg" alt="world handshake" />
+
           <p>Das Ziel von Climate Contract ist es, Generationen zu verkn&uuml;pfen, um gemeinsam einen Beitrag zum Klimaschutz zu leisten. Nachhaltige Produkte und Dienstleistungen sind in vielen Bereichen leider immer noch um einiges teurer als herk&ouml;mmliche Optionen. Diesen Preisunterschied bekommen junge Menschen und Student*innen am meisten zu sp&uuml;ren, da die finanziellen Mittel f&uuml;r klimafreundliche Alternativen oftmals nicht zur Verf&uuml;gung stehen. So stehen junge Menschen immer wieder vor der Entscheidung zwischen &laquo;erschwinglich&raquo; oder &laquo;nachhaltig&raquo; und dies sollte nicht der Fall sein. <br>
           Wir m&ouml;chten dies mit dem Climate Contract &auml;ndern. <br>
           Mit dem Climate Contract k&ouml;nnen &auml;ltere Generationen, junge Menschen und Student*innen bei klimabewussten Entscheidungen und K&auml;ufen finanziell unterst&uuml;tzen. Dadurch wird es jungen Menschen erm&ouml;glicht, eine nachhaltigere und umweltbewusstere Lebensweise zu f&uuml;hren und dadurch einen Beitrag zum Klimaschutz zu leisten. Gleichzeitig bietet Climate Contract eine M&ouml;glichkeit f&uuml;r Sponsoren, &ouml;kologische Investitionen zu f&ouml;rdern und sich so f&uuml;r den Klimaschutz einzusetzen. </p>
-          <img class="illustImage" src="/content/visuals/worldshake.jpeg" alt="world handshake" />
            <h2>Wie funktioniert ein Climate Contract? </h2>
           <p>Climate Contract ist ein Vertrag, der zwischen einer jungen Person bis zum Alter von 25 Jahren und einem Sponsor verabschiedet werden kann. Dabei verpflichtet sich der Sponsor, die zus&auml;tzlichen Kosten, welche beim Kauf von nachhaltigen Produkten und Dienstleistungen anfallen, zu &uuml;bernehmen. Im Gegenzug verspricht die/der Gesponserte, umweltbewusste Entscheidungen zu treffen, zum Beispiel mit dem Zug, anstatt dem Flugzeug zu reisen. Verschiedene Vertr&auml;ge k&ouml;nnen f&uuml;r unterschiedliche Bereiche vereinbart werden, wie zum Beispiel f&uuml;r Reisen oder den Kauf von Kleidung. </p>
            <h2> Wer kann Sponsor sein? </h2>
@@ -128,12 +149,14 @@
           Findest du die Idee von Climate Contract grossartig? <br>
           Schlage doch deiner Tochter/ deinem Neffen vor, gemeinsam ein Climate Contract zu unterzeichnen &#61514; [smiley] </p>
            <h2>Bist du eine junge Person unter 25 Jahren? </h2>
+           <p>
           Dann bist du hier genau richtig! <br>
           Ziel von einem Climate Contract ist es, junge Menschen wie dich, bei klimabewussten Entscheidungen finanziell zu unterst&uuml;tzen. <br>
           Planst du eine Zugreise oder kannst du dir Kleidung von nachhaltigen Labels einfach nicht leisten? <br>
           Frage ein*e Bekannte*r von dir an, zum Beispiel deine Eltern, und schlage vor, dass ihr gemeinsam ein Climate Contract unterzeichnet, um einen Beitrag zum Klimaschutz zu leisten. </p>
            <h2> Wie lange ist der Vertrag g&uuml;ltig? </h2>
-          Der Standart-Vertrag, welcher du hier downloaden kannst, ist bis zum 25. Lebensjahr des Gesponserten g&uuml;ltig. Aber nat&uuml;rlich k&ouml;nnen die Konditionen auch individuell angepasst werden.
+           <p>
+          Der Standart-Vertrag, welcher du <a>hier</a> downloaden kannst, ist bis zum 25. Lebensjahr des Gesponserten g&uuml;ltig. Aber nat&uuml;rlich k&ouml;nnen die Konditionen auch individuell angepasst werden.
         </p>
 
         </div>
